--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.1.7",
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tippyjs/react": "^4.2.6",
     "@types/bcryptjs": "^2.4.6",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
@@ -22,6 +23,7 @@
     "flowbite": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
